--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="https://discord.gg/JTwRUzS" style="color:#fff;">Discord</a></li>
-            <li role="presentation"><a href="https://etherscan.io/address/0x000000" style="color:#fff;">Contract</a></li>
+            <li role="presentation"><a href="https://etherscan.io/address/0x55d743F548490C837858de0e815b2C3a7d4C3198" style="color:#fff;">Contract</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Ether Peace Game</h3>  <h4 class="text-muted">Crypto Idle Game - no more bots, less inflation	<br>	<br>
