--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ function googleTranslateElementInit() {
 		
 
           <h4>Powered by Metamask</h4>
-          <p>This game requires <a href="https://metamask.io/">Metamask</a> or <a href="https://trustwalletapp.com/">Trustwallet</a></p>
+          <p>This game requires <a href="https://metamask.io/">Metamask</a> </p>
 		  
 
         </div>
