--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ function googleTranslateElementInit() {
           <h4>Powered by Metamask</h4>
           <p>This game requires <a href="https://metamask.io/">Metamask</a> </p>
 		  
+          <p>All free Pacifists are already taken </p>
 
         </div>
 
